# vasttrafik_framework

./: .gitignore  README.md  build_and_run_tests.bat  pyproject.toml  requirements.txt  setup.py
data/: test_vasttrafic_home.json
pageobjects/: __init__.py  biljetter_page.py  home_page.py  login_page.py  reseplanering_page.py
testfiles/: conftest.py  pytest.ini  test_search_travelplanner.py  test_vasttrafik_home.py
utilities/: baseclass.py
